--- a/app/views/api/v1/queries/show.text.erb
+++ b/app/views/api/v1/queries/show.text.erb
@@ -4,9 +4,9 @@ RecommendedVersion=3.2.5
 
 [ORGANIZATION]
 RedirectQueryIni=
-Code=AKLEV-NZ
-Name=Auckland Evangelical Church
-Abbreviation=Auckland Ev
+Code=<%= ENV['ORG_CODE'] %>
+Name=<%= ENV['ORG_NAME'] %>
+Abbreviation=<%= ENV['ORG_CODE'] %>
 AccountHelpUrl=mailto:contact@aucklandev.co.nz
 RequestProfileUrl=mailto:contact@aucklandev.co.nz
 OrgHelpUrl=mailto:contact@aucklandev.co.nz
