--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #b81f23;">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #343a40;">
     <div class="container">
-      <a class="navbar-brand" href="<%= root_path %>">Auckland Ev Donation Services</a>
+      <a class="navbar-brand" href="<%= root_path %>"><%= ENV['ORG_NAME'] %> Donation Services</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
