--- a/app/views/mailers/members/inform.html.erb
+++ b/app/views/mailers/members/inform.html.erb
@@ -6,7 +6,7 @@
     <h3>Getting Started with <a href="https://mpdx.org">MPDX.org</a></h3>
     <ol>
       <li>Sign up to MPDX.org</li>
-      <li>Select "Auckland Evangelical Church" in the Organization dropdown</li>
+      <li>Select "<%= ENV['ORG_NAME'] %>" in the Organization dropdown</li>
       <li>Copy your Email into the Username field</li>
       <li>Copy your Authentication Token into the Password field</li>
     </ol>
