--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Auckland Ev Donation Services" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Auckland Ev Donation Services" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "#{ENV['ORG_NAME']} Donation Services" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "#{ENV['ORG_NAME']} Donation Services" %>">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
     <%= csrf_meta_tags %>
