--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,18 +1,24 @@
 <% if current_user %>
-Waiting for admin access
+  <div class="alert alert-primary" role="alert">
+    <% if admin_user = User.where(admin: true).first %>
+      Please contact <%= mail_to admin_user.email %> to get admin access.
+    <% else %>
+      Waiting for admin access.
+    <% end %>
+  </div>
 <% else %>
-<div class="jumbotron">
-  <h1 class="display-3">Hello &amp; Welcome!</h1>
-  <p class="lead">This is a tool to sync donations given to Auckland Evangelical Church with <a href="https://mpdx.org" target="_blank">MPDX.org</a>.</p>
-  <hr class="my-4">
-  <p>
-    MPDX is Fundraising software built for missions and churches.
-    <br>
-    MPDX is a free, secure app that helps you grow and maintain your financial partnerships in a quick and easy way.
-  </p>
-  <p class="lead">
-    <%= link_to 'Sign In', new_user_session_path, class: 'btn btn-primary btn-lg' %>
-    <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-default btn-lg' %>
-  </p>
-</div>
+  <div class="jumbotron">
+    <h1 class="display-3">Hello &amp; Welcome!</h1>
+    <p class="lead">This is a tool to sync donations given to Auckland Evangelical Church with <a href="https://mpdx.org" target="_blank">MPDX.org</a>.</p>
+    <hr class="my-4">
+    <p>
+      MPDX is Fundraising software built for missions and churches.
+      <br>
+      MPDX is a free, secure app that helps you grow and maintain your financial partnerships in a quick and easy way.
+    </p>
+    <p class="lead">
+      <%= link_to 'Sign In', new_user_session_path, class: 'btn btn-primary btn-lg' %>
+      <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-default btn-lg' %>
+    </p>
+  </div>
 <% end %>
