--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -9,7 +9,7 @@
 <% else %>
   <div class="jumbotron">
     <h1 class="display-3">Hello &amp; Welcome!</h1>
-    <p class="lead">This is a tool to sync donations given to Auckland Evangelical Church with <a href="https://mpdx.org" target="_blank">MPDX.org</a>.</p>
+    <p class="lead">This is a tool to sync donations given to <%= ENV['ORG_NAME'] %> with <a href="https://mpdx.org" target="_blank">MPDX.org</a>.</p>
     <hr class="my-4">
     <p>
       MPDX is Fundraising software built for missions and churches.
