update login design

--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -21,5 +21,6 @@
   </li>
   <li class='nav-item'><%= link_to 'Sign Out', destroy_user_session_path, method: 'delete', class: 'nav-link' %></li>
 <% else %>
-  <li class='nav-item'><%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %></li>
+  <li class='nav-item'><%= link_to 'Log In', new_user_session_path, class: 'nav-link' %></li>
+  <li class='nav-item'><%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-outline-success' %></li>
 <% end %>
