--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,18 +1,15 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <h1 class="h3">Welcome back to Donation Core!</h1>
-      <p class="lead">Choose a Workspace</p>
-      <div class="list-group">
-        <% organizations.each do |organization| %>
-          <a href="<%= organization_path(organization) %>" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
-            <div class="ms-2 me-auto">
-              <div class="fw-bold"><%= organization.name %></div>
-              <div class="text-muted"><%= organization.slug %></div>
-            </div>
-          </a>
-        <% end %>
-      </ul>
-    </div>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <h1 class="h3">Welcome.</h1>
+    <p class="lead">Choose a Workspace</p>
+    <div class="list-group">
+      <% organizations.each do |organization| %>
+        <a href="<%= organization_path(organization) %>" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <div class="fw-bold"><%= organization.name %></div>
+          </div>
+        </a>
+      <% end %>
+    </ul>
   </div>
 </div>
