--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="mb-3">
-  <h1 class="h3 d-inline align-middle">Add Workspace</h1>
+  <h1 class="h3 d-inline align-middle">Add Organization</h1>
 </div>
 <div class="card">
   <div class="card-body">
