--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-4 offset-md-4">
       <%= bootstrap_form_for(@organization) do |f| %>
         <div class="mb-3">
-          <%= f.text_field :name, label: 'Workspace Name' %>
+          <%= f.text_field :name, label: 'Organization Name' %>
         </div>
         <%= f.submit "Save", class: 'btn btn-primary' %>
       <% end %>
