--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 offset-md-3">
     <h1 class="h3">Welcome.</h1>
-    <p class="lead">Choose a Workspace</p>
+    <p class="lead">Choose a Organization</p>
     <div class="list-group">
       <% organizations.each do |organization| %>
         <a href="<%= organization_path(organization) %>" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
